# parquet-viewer

./: Cargo.toml  README.md  build.sh  run.sh
src/: browser.rs  console.rs  fs.rs  http.rs  lib.rs  main.rs  pqt.rs  provider.rs  utils.rs  zip.rs
src/provider/: fs.rs  http.rs  mod.rs
