[package]
name = "parquet-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "57.1.0"
async-trait = "0.1.89"
byteorder = "1.5.0"
bytes = "1.11.0"
flate2 = "1.1.5"
futures = "0.3.31"
parquet = "57.1.0"
reqwest = "0.12.24"
rseek = "0.3.0"
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
zip = "6.0.0"
